--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "astro preview"
   },
   "devDependencies": {
+    "@astrojs/svelte": "^0.1.4",
     "@astrojs/tailwind": "^0.2.1",
-    "astro": "^1.0.0-beta.40"
+    "astro": "^1.0.0-beta.40",
+    "svelte": "^3.48.0"
   }
 }
