--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "@astrojs/tailwind": "^0.2.1",
     "astro": "^1.0.0-beta.40",
     "svelte": "^3.48.0"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.1",
+    "faunadb": "^4.6.0"
   }
 }
