--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "astro preview"
   },
   "devDependencies": {
+    "@astrojs/sitemap": "^0.1.2",
     "@astrojs/svelte": "^0.1.4",
     "@astrojs/tailwind": "^0.2.1",
     "astro": "^1.0.0-beta.40",
